Вроде все, но криво

--- a/src/news.html
+++ b/src/news.html
@@ -318,14 +318,14 @@
                     <div class="flex flex-row space-x-12">
                         <div class="columns-md-5">
                             <div class="w-[410px]">
-                                <a href="http://www.meyer-law.ru/news/438">
+                                <a href="teachers.html">
                                     <img
                                     src="../img/teachers.jpg"></a>
                             </div>
                         </div>
                         <div class="w-full">
                                 <h3><a class="font-serif text-4xl text-white font-semibold hover:text-black hover:no-underline hover:transition ease-in-out
-                                    duration-300" href="http://www.meyer-law.ru/news/438">XII ежегодный конкурс студенческих
+                                    duration-300" href="teachers.html">XII ежегодный конкурс студенческих
                                         работ им. Д. И. Мейера</a></h3>
                                 <div class="font-sans text-2xl text-black font-semibold tracking-wide ml-6">
                                     <ul>
@@ -341,7 +341,7 @@
                                 <br>
                                 <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
                                 hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
-                                 duration-700" href="http://www.meyer-law.ru/news/438">Читать новость...</a>
+                                 duration-700" href="teachers.html">Читать новость...</a>
                         </div>
                     </div>
             </div>
