--- a/src/interestsFacts.html
+++ b/src/interestsFacts.html
@@ -192,13 +192,13 @@
                 <div class="flex flex-row space-x-12">
                     <div class="columns-md-5">
                         <div class="w-[410px]">
-                            <a href="http://www.meyer-law.ru/news/297">
+                            <a href="biroto.html">
                                 <img src="../img/anounce_26a226bde764cf571dd532e1a9ca9c29.jpg"></a>
                         </div>
                     </div>
                     <div class="w-full">
                         <h3><a class="font-serif text-4xl text-white font-semibold hover:text-black hover:no-underline hover:transition ease-in-out
-                            duration-300" href="http://www.meyer-law.ru/news/297">&laquo;История величия и падения Цезаря Бирото&raquo;</a></h3>
+                            duration-300" href="biroto.html">&laquo;История величия и падения Цезаря Бирото&raquo;</a></h3>
                         <div class="font-sans text-2xl text-black font-semibold tracking-wide ml-6">
                             <ul>
                                 <li>12.08.2016 </li>
@@ -214,7 +214,7 @@
                         <br>
                         <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
                         hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
-                         duration-700" href="http://www.meyer-law.ru/news/297">Читать новость...</a>
+                         duration-700" href="biroto.html">Читать новость...</a>
                     </div>
                 </div>
             </div>
