--- a/src/contacts.html
+++ b/src/contacts.html
@@ -174,7 +174,7 @@
             <div class="cp-map-row">
                 <div class="map_canvas">
                     <script type="text/javascript" charset="utf-8" async
-                        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=hUYvzQAX5bw7gkSi6UeTWIZMgc3oOWFB&width=100%&height=450&lang=ru_RU&sourceType=constructor&scroll=false">
+                        src="../swiper/yandex.js">
                     </script>
                 </div>
             </div>
