--- a/src/ourSkill.html
+++ b/src/ourSkill.html
@@ -12,9 +12,8 @@
 	<link rel="stylesheet" href="../swiper/tailwind.css">
 
 
-	<!-- Скрипты, отвечающие за карту (взято с сайта)-->
-	<script src="http://www.meyer-law.ru/core/views/meyer/js/jquery-1.11.3.min.js"></script>
-	<script src="http://www.meyer-law.ru/core/views/meyer/js/sticky.js"></script>
+	<script src="../swiper/jquery-1.11.3.min.js"></script>
+	<script src="../swiper/sticky.js"></script>
 </head>
 
 <body class="flex flex-col bg-gray-200">
@@ -96,12 +95,16 @@
 
 
 	<!-- Скрипты, связанные с картой (взято с сайта)-->
-	<link href="../swiper/map.css" media="screen" rel="stylesheet">    
-    <script src="http://www.meyer-law.ru/core/views/meyer/js/map/js/jquery.vmap.js" type="text/javascript"></script>
-    <script src="http://www.meyer-law.ru/core/views/meyer/js/map/js/maps/jquery.vmap.russia.js" type="text/javascript"></script>
+	<link href="../swiper/map.css" media="screen" rel="stylesheet">
+	<script src="../swiper/jquery.vmap.js"></script>
+	<script src="../swiper/jquery.vmap.russia.js"></script>
+	
+
+
+
     
-	<link href="../swiper/jquery-ui.css" media="screen" rel="stylesheet">    
-	<script src="http://www.meyer-law.ru/core/js/jqueryui/jquery-ui.js" type="text/javascript"></script>
+	<link href="../swiper/jquery-ui.css" media="screen" rel="stylesheet">
+	<script src="../swiper/jquery-ui.js"></script>    
 
 	<script type="text/javascript">
 		// Массив всех объектов	
@@ -747,7 +750,7 @@
 				<p style="color:#000;">Проекты, которые ведут адвокаты "Мейер и партнеры" в городе Крымск, в
 					настоящее время не завершены</p>
 	</div>
-	<div id="region_amr" style="display:none;">
+	<div id="region_am" style="display:none;">
 		<b>Благовещенск<b>
 				<p style="color:#000;">Проекты, которые ведут адвокаты "Мейер и партнеры" в городе Благовещенск,
 					в настоящее время не завершены</p>
@@ -968,9 +971,8 @@
 	  </div>
 
 
+	  <script src="../swiper/min.js"></script>
 
-
-	  <script src="http://www.meyer-law.ru/core/views/meyer/js/bootstrap.min.js"></script>
 
 </body>
 
