Попытка сделать masonry

--- a/src/interestsFacts.html
+++ b/src/interestsFacts.html
@@ -152,9 +152,11 @@
                                 банка голдобинский вексель.</p>
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/295">Читать новость...</a>
+                                </div>
                     </div>
                 </div>
             </div>
@@ -182,9 +184,11 @@
                                 Пьеса, 1850 год</p>
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                            hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                            hover:border-white py-3 px-5 border-2 border-white transition delay-150
                              duration-700" href="http://www.meyer-law.ru/news/296">Читать новость...</a>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -212,9 +216,11 @@
                                 и в других произведениях писателя.</p>
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                        hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                        hover:border-white py-3 px-5 border-2 border-white transition delay-150
                          duration-700" href="biroto.html">Читать новость...</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -240,9 +246,11 @@
                                 Салтыковым-Щедриным в 1870 году.</p>
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                        hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                        hover:border-white py-3 px-5 border-2 border-white transition delay-150
                          duration-700" href="http://www.meyer-law.ru/news/309">Читать новость...</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -270,9 +278,11 @@
                                 ругали в газетах. Впрочем, поводы для агрессии и критики он исправно подавал сам.</p>
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                        hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                        hover:border-white py-3 px-5 border-2 border-white transition delay-150
                          duration-700" href="http://www.meyer-law.ru/news/310">Читать новость...</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -301,9 +311,11 @@
                             </p>
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/315">Читать новость...</a>
+                                </div>
                     </div>
                 </div>
             </div>
@@ -331,9 +343,11 @@
                                 Владимирович Лохвицкий.</p>
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                        hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                        hover:border-white py-3 px-5 border-2 border-white transition delay-150
                          duration-700" href="http://www.meyer-law.ru/news/335">Читать новость...</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -362,9 +376,11 @@
                                 таких &laquo;арбитражных&raquo; историй мы и расскажем в этой статье.</p>
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/336">Читать новость...</a>
+                                </div>
                     </div>
                 </div>
             </div>
