--- a/src/news.html
+++ b/src/news.html
@@ -132,9 +132,11 @@
                         </div>
                         <p></p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                    hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150 duration-700"
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                    hover:border-white py-3 px-5  border-2 border-white transition delay-150 duration-700"
                             href="http://www.meyer-law.ru/news/445">Читать новость...</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -163,9 +165,11 @@
                                 финансовых трудностях организации&raquo;.</p>
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/444">Читать новость...</a>
+                                </div>
                     </div>
                 </div>
             </div>
@@ -189,9 +193,11 @@
                         </div>
                         <p></p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/443">Читать новость...</a>
+                                </div>
                     </div>
                 </div>
             </div>
@@ -221,9 +227,11 @@
                                         партнеры&raquo; вошли в рейтинг лучших юридических фирм</p>
                                 </p>
                                 <br>
-                                <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                                <div class="bg-white py-4" style="width: 151px;">
+                                <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/442">Читать новость...</a>
+                                </div>
                         </div>
                     </div>
             </div>
@@ -248,9 +256,11 @@
                                         Поздравляем Вас с наступающим 2022 годом!</p>
                                 </p>
                                 <br>
-                                <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                                <div class="bg-white py-4" style="width: 151px;">
+                                <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/441">Читать новость...</a>
+                                </div>
                         </div>
                     </div>
             </div>
@@ -277,9 +287,11 @@
                                         России &ndash; Право.ru-300.</p>
                                 </p>
                                 <br>
-                                <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                                <div class="bg-white py-4" style="width: 151px;">
+                                <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/440">Читать новость...</a>
+                                </div>
                         </div>
                     </div>
             </div>
@@ -308,9 +320,11 @@
                                     </p>
                                 </p>
                                 <br>
-                                <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                                <div class="bg-white py-4" style="width: 151px;">
+                                <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/439">Читать новость...</a>
+                                </div>
                         </div>
                     </div>
             </div>
@@ -339,9 +353,11 @@
                                         студенческих работ имени Д.И. Мейера.</p>
                                 </p>
                                 <br>
-                                <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                                <div class="bg-white py-4" style="width: 151px;">
+                                <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="teachers.html">Читать новость...</a>
+                                </div>
                         </div>
                     </div>
             </div>
@@ -370,9 +386,11 @@
                                         одиночных флешмобов по всей стране и миру с 22 мая по 1 июня 2021 года.</p>
                                 </p>
                                 <br>
-                                <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                                hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150
+                                <div class="bg-white py-4" style="width: 151px;">
+                                <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                                hover:border-white py-3 px-5 border-2 border-white transition delay-150
                                  duration-700" href="http://www.meyer-law.ru/news/436">Читать новость...</a>
+                                </div>
                         </div>
                     </div>
             </div>
@@ -402,9 +420,11 @@
                                  посвященная памяти профессора кафедры гражданско-правовых дисциплин Михаила Федоровича Медведева (1925–2011 гг.).
                         </p>
                         <br>
-                        <a class="text-center uppercase text-gray-500 font-semibold hover:bg-red-700 hover:text-white hover:no-underline
-                            hover:border-white py-3 px-5 bg-white border-2 border-white transition delay-150 duration-700"
+                        <div class="bg-white py-4" style="width: 151px;">
+                        <a class="news relative z-[11] text-center uppercase text-gray-500 font-semibold hover:text-white hover:no-underline
+                            hover:border-white py-3 px-5 border-2 border-white transition delay-150 duration-700"
                             href="http://www.meyer-law.ru/news/434">Читать новость...</a>
+                        </div>
                     </div>
                 </div>
             </div>
