Добавил визуальный эффект на новедение фотографий и подредактировал подвал в Поиске

--- a/src/index.html
+++ b/src/index.html
@@ -254,7 +254,7 @@
                         26.04.2022
                       </a></h3>
                   </div>
-                  <p class="text-left ml-80 font-serif text-2xl text-black font-thin tracking-wide">«Момент возникновения
+                  <p class="text-center font-serif text-2xl text-black font-thin tracking-wide">«Момент возникновения
                     обязанности контролирующих лиц сообщить о финансовых трудностях
                     организации».</p>
                   <span style="float:right;"><a class="mt-14 mr-2 text-2xl text-red-900 hover:underline hover:text-red-900"
