--- a/src/interestsFacts.html
+++ b/src/interestsFacts.html
@@ -127,10 +127,12 @@
                 <div class="flex flex-row space-x-12">
                     <div class="columns-md-5">
                         <div class="w-[410px]">
+                            <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/295';">
                             <a href="http://www.meyer-law.ru/news/295">
                                 <img
                                     src="../img/anounce_d1aea1b1605890e785822157dc78a7cb.jpg">
                             </a>
+                            </div>
                         </div>
                     </div>
                     <div class="w-full">
@@ -164,10 +166,12 @@
                 <div class=" flex flex-row space-x-12">
                     <div class="columns-md-5">
                         <div class="w-[410px]">
+                            <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/296';">
                             <a href="http://www.meyer-law.ru/news/296">
                                 <img
                                     src="../img/anounce_8d5bc3266789c99721e57a1a7687d163.jpg">
                             </a>
+                            </div>
                         </div>
                     </div>
                     <div class="w-full">
@@ -196,8 +200,10 @@
                 <div class="flex flex-row space-x-12">
                     <div class="columns-md-5">
                         <div class="w-[410px]">
+                            <div class="frame" style="cursor:pointer;" onclick="location='biroto.html';">
                             <a href="biroto.html">
                                 <img src="../img/anounce_26a226bde764cf571dd532e1a9ca9c29.jpg"></a>
+                            </div>
                         </div>
                     </div>
                     <div class="w-full">
@@ -228,8 +234,10 @@
                 <div class="flex flex-row space-x-12">
                     <div class="columns-md-5">
                         <div class="w-[410px]">
+                            <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/309';">
                             <a href="http://www.meyer-law.ru/news/309">
                                 <img src="../img/anounce_5c2e2fe8d109cb13aa24823895168502.jpg"></a>
+                            </div>
                         </div>
                     </div>
                     <div class="w-full">
@@ -258,8 +266,10 @@
                 <div class="flex flex-row space-x-12">
                     <div class="columns-md-5">
                         <div class="w-[410px]">
+                            <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/310';">
                             <a href="http://www.meyer-law.ru/news/310">
                                 <img src="../img/anounce_f17ddb536b65762bb3a9bb81f19025e0.jpg"></a>
+                            </div>
                         </div>
                     </div>
                     <div class="w-full">
@@ -289,7 +299,7 @@
             <div class="columns-md-12">
                 <div class="flex flex-row space-x-12">
                     <div class="columns-md-5">
-                        <div>
+                        <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/315';">
                             <a href="http://www.meyer-law.ru/news/315">
                                 <img src="../img/news-img.png"></a>
                         </div>
@@ -323,8 +333,10 @@
                 <div class="flex flex-row space-x-12">
                     <div class="columns-md-5">
                         <div class="w-[410px]">
+                            <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/335';">
                             <a href="http://www.meyer-law.ru/news/335">
                                 <img src="../img/anounce_a52893945dd45d36219b95c5398a3428.jpg"  style="width: 410px;"></a>
+                            </div>
                         </div>
                     </div>
                     <div class="w-full">
@@ -355,9 +367,11 @@
                 <div class="flex flex-row space-x-12">
                     <div class="columns-md-5">
                         <div class="w-[410px]">
+                            <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/336';">
                             <a href="http://www.meyer-law.ru/news/336">
                                 <img
                                     src="../img/anounce_380ba0612f9c6f1718c9fc907c879916.jpg"></a>
+                            </div>
                         </div>
                     </div>
                     <div class="w-full">
