--- a/src/search.html
+++ b/src/search.html
@@ -131,7 +131,7 @@
 
     <footer class="mt-24">
         <section class="cp-footer-content">
-            <div class="container mx-auto">
+            <div class="container mx-auto" style="padding-right: 0px;">
                 <div class="flex-row">
                     <div class="columns-md-3 col-sm-3">
                         <div class="columns-md-6 columns-sm-6 col-xs-6">
