--- a/src/nalog.html
+++ b/src/nalog.html
@@ -47,6 +47,15 @@
         <div class="container mx-auto"> <strong class="logo"><a href="index.html"><img src="../img/logo.png"
                         alt="img"></a></strong>
             <div class="navigation-right whitespace-nowrap">
+                <div class="burger">
+                    <nav class="navbar navbar-inverse">
+                      <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                          aria-expanded="false" aria-controls="navbar">
+                          <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
+                            class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                      </div>
+                      <div id="navbar" class="collapse navbar-collapse">
                 <ul class="flex space-x-0">
                     <li><a class="px-7 font-serif text-3xl text-gray-600 font-medium border border-gray-400/0 hover:border-slate-800
              transition ease-in duration-300 hover:no-underline hover:text-gray-600" href="index.html">
@@ -90,6 +99,8 @@
                             Контакты
                         </a></li>
                 </ul>
+                      </div>
+                    </nav>
             </div>
         </div>
     </header>
@@ -161,6 +172,7 @@
                         <li>представительство в судах по налоговым спорам.</li>
                     </ul>
                 </div>
+                <div class="col-md-4">
                 <style>
                     .rmenu-active {
                         background-color: #d6414e;
@@ -206,6 +218,7 @@
                         </ul>
                     </div>
                 </div>
+                </div>
             </div>
         </div>
     </section>
@@ -233,7 +246,7 @@
                     <div class="columns-md-9 col-sm-9">
                         <div class="col-md-3 col-sm-3 foot-col-3">
                             <nav class="navbar">
-                                <ul class="space-y-6">
+                                <ul class="space-y-6" style="color: #333;">
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
@@ -263,7 +276,7 @@
                         </div>
                         <div class="col-md-6 col-sm-6 foot-col-6">
                             <nav class="navbar">
-                                <ul class="space-y-6">
+                                <ul class="space-y-6" style="color: #333;">
                                     <li>
                                         <i class="fas fa-square"></i>
                                         <a class="font-serif text-2xl text-white font-semibold hover:text-white"
