Адаптированы все вкладки, кроме отзывов, подвала и открывающихся в новостях и интересных фактах

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -271,7 +271,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="columns-md-3 col-sm-3">
+                        <div class="flex justify-center sm:columns-md-3 col-sm-3">
                             <div class="col-md-6 col-sm-12 col-xs-12">
                                 <noindex><a href="http://www.fparf.ru/" rel="nofollow" target="_blank"><img
                                             src="../img/gerb.png"></a>
@@ -306,12 +306,12 @@
         <div class="fixed bottom-0 left-0 right-0 bg-gray-200">
             <div class="container mx-auto">
                 <div class="flex flex-row w-full">
-                    <div class="columns-md-12 col-sm-12 text-center news-pod py-3">
-                        <input placeholder="E-mail" class="border transition duration-500 placeholder-gray-400 font-normal text-3xl border-slate-800 py-4
+                    <div class="columns-md-12 col-sm-12 text-center news-pod py-1 sm:py-3">
+                        <input placeholder="E-mail" class="border transition duration-500 placeholder-gray-400 font-normal text-3xl border-slate-800 py-1 sm:py-4
                   text-left pl-4 text-slate-800 focus:outline-none">
                         <a href="#subscribe_form"
                             class="text-center text-3xl text-red-700 font-medium hover:bg-red-700 hover:text-white hover:no-underline
-                   hover:border-white py-4 bg-white border-2 border-red-700 transition delay-150 duration-700">Подписаться
+                   hover:border-white py-1 sm:py-4 bg-white border-2 border-red-700 transition delay-150 duration-700">Подписаться
                             на новости</a>
                     </div>
                 </div>
