--- a/src/interestsFacts.html
+++ b/src/interestsFacts.html
@@ -135,9 +135,9 @@
             </p>
             <br>
             <div class="columns-md-8">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/295';">
                             <a href="http://www.meyer-law.ru/news/295">
                                 <img
@@ -174,9 +174,9 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class=" flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/296';">
                             <a href="http://www.meyer-law.ru/news/296">
                                 <img
@@ -208,9 +208,9 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='biroto.html';">
                             <a href="biroto.html">
                                 <img src="../img/anounce_26a226bde764cf571dd532e1a9ca9c29.jpg"></a>
@@ -242,9 +242,9 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/309';">
                             <a href="http://www.meyer-law.ru/news/309">
                                 <img src="../img/anounce_5c2e2fe8d109cb13aa24823895168502.jpg"></a>
@@ -274,9 +274,9 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/310';">
                             <a href="http://www.meyer-law.ru/news/310">
                                 <img src="../img/anounce_f17ddb536b65762bb3a9bb81f19025e0.jpg"></a>
@@ -308,14 +308,14 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
                         <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/315';">
                             <a href="http://www.meyer-law.ru/news/315">
                                 <img src="../img/news-img.png"></a>
                         </div>
                     </div>
-                    <div class="w-2/3">
+                    <div class="w-full lg:w-2/3">
                         <h3><a class="font-serif text-4xl text-white font-semibold hover:text-black hover:no-underline hover:transition ease-in-out
                                     duration-300" href="http://www.meyer-law.ru/news/315">Интересные факты о жизни Дмитрия Ивановича Мейера</a>
                         </h3>
@@ -341,9 +341,9 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/335';">
                             <a href="http://www.meyer-law.ru/news/335">
                                 <img src="../img/anounce_a52893945dd45d36219b95c5398a3428.jpg"  style="width: 410px;"></a>
@@ -375,9 +375,9 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/336';">
                             <a href="http://www.meyer-law.ru/news/336">
                                 <img
@@ -504,7 +504,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="columns-md-3 col-sm-3">
+                        <div class="flex justify-center sm:columns-md-3 col-sm-3">
                             <div class="col-md-6 col-sm-12 col-xs-12">
                                 <noindex><a href="http://www.fparf.ru/" rel="nofollow" target="_blank"><img
                                             src="../img/gerb.png"></a>
