--- a/src/news.html
+++ b/src/news.html
@@ -124,9 +124,9 @@
         <div class="container mx-auto mt-48 space-y-12">
 
             <div class="columns-md-8">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/445';">
                                 <img src="../img/flowers.jpg"> 
                                 <a href="http://www.meyer-law.ru/news/445" class="link"><i class="fas fa-link"></i>
@@ -154,7 +154,7 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
                         <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/444';">
                                 <img src="../img/news-img.png">
@@ -162,7 +162,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="w-2/3">
+                    <div class="w-full lg:w-2/3">
                         <h3><a class="font-serif text-4xl text-white font-semibold hover:text-black hover:no-underline hover:transition ease-in-out
                                     duration-300" href="http://www.meyer-law.ru/news/444">Cтатья юрисконсульта ВКА
                                 «Мейер и
@@ -187,9 +187,9 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/443';">
                             <a href="http://www.meyer-law.ru/news/443">
                                 <img src="../img/cookies.jpg"></a>
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class=" flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
                         <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/442';">
                             <a href="http://www.meyer-law.ru/news/442">
@@ -224,7 +224,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="w-2/3">
+                    <div class="w-full lg:w-2/3">
                         <h3><a class="font-serif text-4xl text-white font-semibold hover:text-black hover:no-underline hover:transition ease-in-out
                                     duration-300" href="http://www.meyer-law.ru/news/442">Волгоградская коллегия
                                 адвокатов
@@ -251,14 +251,14 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
                         <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/441';">
                             <a href="http://www.meyer-law.ru/news/441">
                                 <img src="../img/news-img.png"></a>
                         </div>
                     </div>
-                    <div class="w-2/3">
+                    <div class="w-full lg:w-2/3">
                         <h3><a class="font-serif text-4xl text-white font-semibold hover:text-black hover:no-underline hover:transition ease-in-out
                                     duration-300" href="http://www.meyer-law.ru/news/441">Дорогие друзья!</a></h3>
                         <div class="font-sans text-2xl text-black font-semibold tracking-wide ml-6">
@@ -280,14 +280,14 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
                         <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/440';">
                             <a href="http://www.meyer-law.ru/news/440">
                                 <img src="../img/news-img.png"></a>
                         </div>
                     </div>
-                    <div class="w-2/3">
+                    <div class="w-full lg:w-2/3">
                         <h3><a class="font-serif text-4xl text-white font-semibold hover:text-black hover:no-underline hover:transition ease-in-out
                                     duration-300" href="http://www.meyer-law.ru/news/440">Подводим итоги года</a></h3>
                         <div class="font-sans text-2xl text-black font-semibold tracking-wide ml-6">
@@ -311,14 +311,14 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
                         <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/439';">
                             <a href="http://www.meyer-law.ru/news/439">
                                 <img src="../img/news-img.png"></a>
                         </div>
                     </div>
-                    <div class="w-2/3">
+                    <div class="w-full lg:w-2/3">
                         <h3><a class="font-serif text-4xl text-white font-semibold hover:text-black hover:no-underline hover:transition ease-in-out
                                     duration-300" href="http://www.meyer-law.ru/news/439">Новая юридическая победа</a>
                         </h3>
@@ -345,10 +345,10 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
-                            <div class="frame" style="cursor:pointer;" onclick="location='../img/teachers.jpg';">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
+                            <div class="frame" style="cursor:pointer;" onclick="location='teachers.html';">
                             <a href="teachers.html">
                                 <img src="../img/teachers.jpg"></a>
                             </div>
@@ -379,9 +379,9 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
-                        <div class="w-[410px]">
+                        <div class="w-[340px] sm:w-[560px] md:w-[700px] lg:w-[410px]">
                             <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/436';">
                             <a href="http://www.meyer-law.ru/news/436">
                                 <img src="../img/students.jpg"></a>
@@ -414,7 +414,7 @@
                 </div>
             </div>
             <div class="columns-md-12">
-                <div class="flex flex-row space-x-12">
+                <div class="flex flex-col space-y-12 lg:flex lg:flex-row lg:space-x-12">
                     <div class="columns-md-5">
                         <div class="frame" style="cursor:pointer;" onclick="location='http://www.meyer-law.ru/news/434';">
                             <a href="http://www.meyer-law.ru/news/434">
@@ -423,7 +423,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="w-2/3">
+                    <div class="w-full lg:w-2/3">
                         <h3><a class="font-serif text-4xl text-white font-semibold hover:text-black hover:no-underline hover:transition ease-in-out
                                  duration-300" href="http://www.meyer-law.ru/news/434">Тенденции развития
                                 законодательства о деликтных обязательствах</a>
@@ -452,8 +452,8 @@
             </div>
             <div class="columns-md-12">
                 <div class="flex justify-center mt-32">
-                    <ul class="flex space-x-4">
-                        <li class="disabled"><span class="text-center rounded-r-lg uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
+                    <ul class="flex flex-wrap space-x-3 space-y-16 2xl:flex 2xl:space-x-4">
+                        <li class="mt-16 disabled"><span class="text-center rounded-r-lg uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
                             hover:border-white p-6 bg-white transition delay-100
                              duration-300">Назад</span></li>
                         <li class="active"><span class="text-center rounded-md uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
@@ -471,16 +471,16 @@
                         <li><a href="/news/all/5" class="text-center rounded-md uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
                             hover:border-white p-6 bg-white transition delay-100
                              duration-300">5</a></li>
-                        <li class=""><span class="text-center rounded-md uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
+                        <li><span class="text-center rounded-md uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
                             hover:border-white p-6 bg-white transition delay-100
                              duration-300">…</span></li>
                         <li><a href="/news/all/40" class="text-center rounded-md uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
                             hover:border-white p-6 bg-white transition delay-100
                              duration-300">40</a></li>
-                        <li><a href="/news/all/41" class="text-center rounded-md uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
+                        <li ><a href="/news/all/41" class="text-center rounded-md uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
                             hover:border-white p-6 bg-white transition delay-100
                              duration-300">41</a></li>
-                        <li><a href="/news/all/2" class="text-center rounded-l-lg uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
+                        <li ><a href="/news/all/2" class="text-center rounded-l-lg uppercase text-gray-500 font-semibold hover:bg-red-500 hover:text-white hover:no-underline
                             hover:border-white p-6 bg-white transition delay-100
                              duration-300">Дальше</a></li>
                     </ul>
@@ -567,7 +567,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="columns-md-3 col-sm-3">
+                        <div class="flex justify-center sm:columns-md-3 col-sm-3">
                             <div class="col-md-6 col-sm-12 col-xs-12">
                                 <noindex><a href="http://www.fparf.ru/" rel="nofollow" target="_blank"><img
                                             src="../img/gerb.png"></a>
