Работает бургер и адаптирована страница отзывы

--- a/src/bankruptcy.html
+++ b/src/bankruptcy.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="../swiper/tailwind.css">
     <link rel="stylesheet" href="../swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../swiper/custom.css">
+    <link rel="stylesheet" href="../swiper/color.css">
+    <link href="../swiper/responsive.css" rel="stylesheet" type="text/css">
+
+
+    <script src="../swiper/jquery-1.11.3.min.js"></script>
 </head>
 
 
@@ -414,7 +419,7 @@
 
     </div>
 
-
+    <script src="../swiper/tailwind.js"></script>
 
 </body>
 
