--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,11 @@
   <link rel="stylesheet" href="../swiper/responsive.css">
   <link rel="stylesheet" href="../swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="../swiper/custom.css">
+  <link rel="stylesheet" href="../swiper/color.css">
+  <link href="../swiper/responsive.css" rel="stylesheet" type="text/css">
+
+
+  <script src="../swiper/jquery-1.11.3.min.js"></script>
 </head>
 
 
@@ -424,7 +429,7 @@
 
 
 
-
+  <script src="../swiper/tailwind.js"></script>
   <script src="../swiper/swiper-bundle.min.js"></script>
   <script src="../script.js"></script>
 </body>
