--- a/src/teachers.html
+++ b/src/teachers.html
@@ -12,6 +12,11 @@
     <link href="../fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="../swiper/tailwind.css">
     <link rel="stylesheet" href="../swiper/custom.css">
+    <link rel="stylesheet" href="../swiper/color.css">
+    <link href="../swiper/responsive.css" rel="stylesheet" type="text/css">
+
+
+    <script src="../swiper/jquery-1.11.3.min.js"></script>
 
 </head>
 
@@ -362,7 +367,7 @@
 
     </div>
 
-
+    <script src="../swiper/tailwind.js"></script>
 
 </body>
 
