--- a/src/ourSkill.html
+++ b/src/ourSkill.html
@@ -10,6 +10,8 @@
 	<link href="../fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="../swiper/custom.css">
 	<link rel="stylesheet" href="../swiper/tailwind.css">
+	<link rel="stylesheet" href="../swiper/color.css">
+    <link href="../swiper/responsive.css" rel="stylesheet" type="text/css">
 
 
 	<script src="../swiper/jquery-1.11.3.min.js"></script>
@@ -982,7 +984,7 @@
 	
 	  </div>
 
-
+	  <script src="../swiper/tailwind.js"></script>
 	  <script src="../swiper/min.js"></script>
 
 
